--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
     <ul class="list-group todos mx-auto text-light">
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <span>play mariokart</span>
+        <span>play Fifa</span>
         <i class="far fa-trash-alt delete"></i>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <span>defeat ganon in zelda</span>
+        <span>Play COD</span>
         <i class="far fa-trash-alt delete"></i>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <span>make a veggie pie</span>
+        <span>make a brownie cake</span>
         <i class="far fa-trash-alt delete"></i>
       </li>
     </ul>
